--- a/bpf/index.html
+++ b/bpf/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Drive crypt workshops</title>
+    <title>BPF workshops</title>
 
     <link rel="stylesheet" href="dist/reset.css">
     <link rel="stylesheet" href="dist/reveal.css">
@@ -68,17 +68,13 @@
                 </aside>
             </section>
 
-            <section data-menu-title="Preface">
+            <section data-menu-title="Quality bait">
                 <h2>Przedsmak</h2>
-                <p class="fragment highlight-current-blue">BPF -> eBPF -> BPF</p>
+                <p class="fragment highlight-current-blue">BPF('92) -> eBPF('14) -> BPF(now)</p>
                 <p class="fragment highlight-current-blue">Mechanizm kernela</p>
-                <p class="fragment highlight-current-blue">Możliwa nowa klasa aplikacji</p>
-                <p class="fragment highlight-current-blue">Wykonujemy kod z poziomu kernela (づ｡◕‿‿◕｡)づ</p>
+                <p class="fragment highlight-current-blue">Nowa klasa aplikacji!</p>
+                <p class="fragment highlight-current-blue">(づ｡◕‿‿◕｡)づ Wykonujemy kod z poziomu kernela</p>
                 <p class="fragment highlight-current-blue">Observability, tracing, forwarding, security</p>
-
-                <aside class="notes">
-                    1992 BPF, 2014 eBPF
-                </aside>
             </section>
 
             <section data-menu-title="Workshop plans">
@@ -231,28 +227,84 @@
                 <h2>kprobe, uprobe</h2>
             </section>
 
-            <section data-menu-title="TODO Stats & graphs magic">
+            <section data-menu-title="Stats & graphs magic">
                 <h2>co możemy z tego ciekawego zrobić, np.</h2>
                 <ul>
-                    <li>Statystyki</li>
                     <li>Rozkład w czasie</li>
+                    <li>Statystyki</li>
                     <li>Histogram</li>
-                    <li>Flame graph (vs. chart)</li>
-                    <li>Flamescope</li>
-                    <li>Heatmap/saturation</li>
+                    <li>Flame graph (& chart*)</li>
+                    <li>Heatmap/Flamescope</li>
                 </ul>
+
+                <aside class="notes">
+                    Flame chart == JS, w czasie
+                </aside>
             </section>
 
-            <section data-menu-title="TODO Histogram">
+            <section data-menu-title="Histogram">
                 <h2>Histogram</h2>
+                <pre class="bash">
+                    <code data-trim data-noescape>
+root@nasa.gov:/home/rikkt0r# runqlat.bt
+Attaching 5 probes...
+Tracing CPU scheduler... Hit Ctrl-C to end.
+^C
+
+
+@usecs:
+[0]                18684 |@@@@@@@@@@@@@@@@@                                   |
+[1]                56506 |@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@|
+[2, 4)             40787 |@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@               |
+[4, 8)             17662 |@@@@@@@@@@@@@@@@                                    |
+[8, 16)            22820 |@@@@@@@@@@@@@@@@@@@@@                               |
+[16, 32)           29038 |@@@@@@@@@@@@@@@@@@@@@@@@@@                          |
+[32, 64)            9437 |@@@@@@@@                                            |
+[64, 128)           6672 |@@@@@@                                              |
+[128, 256)          4357 |@@@@                                                |
+[256, 512)          3135 |@@                                                  |
+[512, 1K)           2416 |@@                                                  |
+[1K, 2K)            1652 |@                                                   |
+[2K, 4K)             647 |                                                    |
+[4K, 8K)             220 |                                                    |
+[8K, 16K)             19 |                                                    |
+[16K, 32K)             1 |                                                    |
+
+                    </code>
+                </pre>
             </section>
 
-            <section data-menu-title="TODO Flame graph">
+            <section data-menu-title="Flame graph">
                 <h2>Flame graph</h2>
+                <img src="assets/flame_graph.svg" />
+                <small>https://www.brendangregg.com/FlameGraphs/cpu-bash-flamegraph.svg</small>
             </section>
 
-            <section data-menu-title="TODO Flame scope">
-                <h2>Flame scope</h2>
+            <section data-menu-title="Flame graph 2">
+                <h3>Flame graph JVM + separate kernel</h3>
+                <img style="max-height: 500px;" src="assets/flame_graph_2.svg" />
+                <small>https://www.brendangregg.com/FlameGraphs/example-perf.svg</small>
+            </section>
+
+            <section data-menu-title="Heatmap">
+                <h2>Heatmap; Flame scope 1/3</h2>
+                <img src="assets/flamescope_1.webp" />
+            </section>
+
+            <section data-menu-title="Heatmap 2">
+                <h2>Heatmap; Flame scope 2/3</h2>
+                <img src="assets/flamescope_2.webp" />
+            </section>
+
+            <section data-menu-title="Heatmap 3">
+                <h2>Heatmap; Flame scope 3/3</h2>
+                <img src="assets/flamescope_3.webp" />
+            </section>
+
+            <section>
+                "USE" (Utilization Saturation Errors) method
+                <img width="600" src="assets/usemethod_flow.png"/>
+                <small>https://www.brendangregg.com/usemethod.html &copy;</small>
             </section>
 
         </section> <!-- end performance -->
@@ -289,60 +341,186 @@
                 <p>Ostatni slajd wstępu :-)</p>
             </section>
 
-            <section data-menu-title="TODO Brandon 60s">
-                <h2>60 second easy win by brandon</h2>
+            <section data-menu-title="Brandon 60s">
+                <h2>60 second easy win by Brandon</h2>
+                <pre class="bash">
+                    <code data-trim data-noescape>
+                        uptime
+                        dmesg | tail
+                        vmstat 1
+                        mpstat -P ALL 1
+                        pidstat 1
+                        iostat -xz 1
+                        free -m
+                        sar -n DEV 1
+                        sar -n TCP,ETCP 1
+                        top
+                    </code>
+                </pre>
+                <small class="r-fit-text">https://netflixtechblog.com/linux-performance-analysis-in-60-000-milliseconds-accc10403c55</small>
+
+                <aside class="notes">
+                    Panie admiiiiiiin<br />
+                    Nie działa. Żre proca, ramu nie ma, dysk muli, sieć zwisa, kable więdną<br /><br />
+                    TCPv4!<br/><br/>
+
+                    TCP: active/s [tcpActiveOpens] CLOSED ---> SYN-SENT <br/>
+                    TCP: passive/s [tcpPassiveOpens] SYN-RCVD ---> LISTEN <br/>
+                    TCP: iseg/s [tcpInSegs] segments received per second (including errors) <br/>
+                    TCP: oseg/s [tcpOutSegs] segments sent per second (without errors/retrans) <br/><br/>
+
+                    ETCP: atmptf/s [tcpAttempt‐Fails]  (SYN-SENT, SYN-RCVD) ---> CLOSED + SYN-RCVD ----> LISTEN <br />
+                    ETCP: estres/s [tcpEstabResets]   (ESTABLISHED, CLOSE-WAIT) ---> CLOSED <br />
+                    ETCP: retrans/s [tcpRetransSegs] Num of segments retransmitted per second<br />
+                    ETCP: isegerr/s [tcpInErrs] num of segments received in error (e.g., bad TCP checksums) per second<br />
+                    ETCP: orsts/s [tcpOutRsts] num of TCP segments sent per second containing the RST flag
+                </aside>
             </section>
         </section> <!-- end resources -->
 
 
         <section> <!-- begin bpf -->
-            21. czas na mięsko, BPF
-            21.1 brandon dogadal sie z alexiejem i tak powstał czokapik
-            21.2 stary bpf 1992, ebpf 2012
-            21.3 filmik o historii BPF'a, jak thriller: https://www.youtube.com/watch?v=Wb_vD3XZYOA
 
-            22. Programowalny kernel? Lolololo, patchowanie kernela w locie? czekej.. a czy to nie niebezpieczne?
-            User wdupcy co w kernel? Ale faza. Andrzej, to jebnie
+            <section data-menu-title="BPF">
+                <h2>Wreszcie czas na</h2>
+                <img src="assets/ebpf_logo_glow.png" />
+            </section>
 
-            schemat BPF'a tutaj.
+            <section data-menu-title="BPF cont.">
+                <h2>BPF</h2>
+                <img src="assets/bpf_libbpf.png" />
 
+                <small>Btw. jest też ebpf.pdf.exe na windowsa: https://github.com/microsoft/ebpf-for-windows</small>
 
-            23. ale po co to komu... przecie już jest tyle narzędzi: perf, systemTap, LTTng, Dtrace. spoko nie, żadne nie jest skutecznie stabilne i cool
-            24. narośla BPF czerpią garściami z tych narzędzi
-            24.1 wydajność
-            24.2 umi wincyj
-            23. wykonanie kernel space vs. user space
-            24. ło kurwa, aż taka różnica? -> tak
-            24.1  Pokazać jak wygląda jedna alokacja w kernelu (strace jakiegoś prostego C ?) - i dlaczego w kernel space lepiej coś robić
-            25.
+                <aside class="notes">
+                    Patchowanie kernela na runtime? Przez usera? Andrzej to jebnie.<br />
+                    --f-no-omit-frame-pointer is love
+                </aside>
+            </section>
 
+            <section data-menu-title="BPF cont.">
+                <h2>BPF Verifier</h2>
+                <img src="assets/bpf_loader.png" />
+            </section>
+
+            <section data-menu-title="Alternatives">
+                <h2>Ale przecie istnieją już narzędzia do profilowania/traecingu?</h2>
+                <p class="fragment fade-in-then-semi-out">No tak...</p>
+                <p>
+                    <span class="fragment fade-in-then-semi-out">ftrace</span>
+                    <span class="fragment fade-in-then-semi-out">perf</span>
+                    <span class="fragment fade-in-then-semi-out">systemTap</span>
+                    <span class="fragment fade-in-then-semi-out">LTTng</span>
+                    <span class="fragment fade-in-then-semi-out">Dtrace</span>
+                </p>
+                <p class="fragment fade-in-then-semi-out">...ale:</p>
+                <p class="fragment fade-in-then-semi-out">Są na poziomie user space (skrót myślowy)</p>
+                <p class="fragment fade-in-then-semi-out">BPF umie więcej niż tylko tracing</p>
+                <p class="fragment fade-in-then-semi-out">BPF umi szybciej</p>
+                <p class="fragment fade-in-then-semi-out">Narzędzia BPF korzystają z dorobku intelektualnego powyższych</p>
+                <p class="fragment fade-in-then-semi-out">Optymalne BPF'owe bajery!</p>
+
+                <aside class="notes">
+                    bajery == mapy w pamięci kernela
+                </aside>
+            </section>
+
+            <section data-menu-title="BCC, BPFTrace">
+                <h2>Front-end BPF</h2>
+                <p>Czyste C</p>
+                <p>BCC</p>
+                <p>BPFTrace</p>
+            </section>
+
+            <section data-menu-title="TODO BCC">
+                <h2>BCC</h2>
+            </section>
+
+            <section data-menu-title="TODO BPFtrace">
+                <h2>BPFtrace</h2>
+            </section>
+
+            <section data-menu-title="TODO Typy programów bpf">
+                <h2>Typy programów BPF</h2>
+            </section>
+
+            <section data-menu-title="TODO inne">
+                <p>
             BPF - struktury w C - dostęp do nich,
             bpftrace (w tym jezyk) vs bcc
             dostępne mapy w pamięci
+                </p>
+
+            </section>
+
         </section> <!-- end bpf -->
 
 
         <section> <!-- begin examples -->
-            26. lock na postgresie
-            27. socket unixowy 108 znaków ścieżka - jenkins umierał
-            28. nie ma jakiegoś pliku
-            29. apka wisi i uj wi na co czeka (tutaj bpf do dnsów się kłania)
-            30. short lived task
-            31. cilium
-            32. log security - bash readline z całego systemu
-            33. TCP splicing - rozrzucanie ruchu :3
-            24. Dockerki - wychwytywanie OOM (bo to się słabo loguje...)
 
-            overscaling - czas oczekiwania na kolej dla wątku rośnie
+            <section data-menu-title="Stories">
+                <h2>Kilka życiowych przypadków</h2>
+                <p class="fragment">(życiowych dla mnie)</p>
+            </section>
+
+            <section data-menu-title="TODO file access">
+                <h2>nie ma jakiegoś pliku (np. konfiguracyjnego)</h2>
+                <h2>albo na odwrót... jest a nie powinno być</h2>
+            </section>
+
+            <section data-menu-title="TODO Short lived task">
+                <h2>Short lived task</h2>
+
+                <aside class="notes">
+                    Live prezentacja top vs. execsnoop
+                </aside>
+            </section>
+
+            <section data-menu-title="TODO Timeout on jenkins job">
+                <h2>Timeout na jobie jenkinsowym</h2>
+                <p class="fragment">Pomysły??</p>
+                <p class="fragment">Odpalamy ....</p>
+                <p class="fragment">O... ścieżka do unix socket ma ograniczenie na 108 znaków :)</p>
+            </section>
+
+            <section data-menu-title="TODO Python GIL psycopg">
+                <h2>lock na postgresie</h2>
+            </section>
+
+            <section data-menu-title="TODO Overscalling!">
+                <h2>Więcej == lepiej??</h2>
+                <p class="fragment fade-in-then-semi-out">Więcej procesów FCGI/WSGI == szybciej, lepiej?</p>
+                <p class="fragment fade-in-then-semi-out">Sprawdźmy :-)</p>
+                <pre class="bash">
+                    <code>
+la la la
+                    </code>
+                </pre>
+            </section>
+
+            <section data-menu-title="TODO DNS hang">
+                <h2>apka wisi i uj wi na co czeka (tutaj bpf do dnsów się kłania)F</h2>
+            </section>
+
+            <section data-menu-title="Intrusive admin :)">
+                <h2>Adminowa zabawa - podglądanie shella</h2>
+                <p>(lub zabieg security, co by lepiej nie brzmiało)</p>
+                <p>Bash readline :)</p>
+            </section>
+
+            <section data-menu-title="Cilium">
+                <h2>Cilium + TCP Splicing</h2>
+                <p>firma Rudego - L7 scaller</p>
+            </section>
         </section> <!-- end examples -->
 
 
-        <section data-menu-title="BPF Tools">
-            <section>
+        <section>
+            <section data-menu-title="BPF Tools">
                 <h2>BPF Tools ┬─┬ ︵ /(.□. \）</h2>
                 <pre class="bash">
                     <code data-trim data-noescape>
-rikkt0r@PP-NB-0124:20:34:26:/usr/sbin$ ls *-bpfcc
+rikkt0r@xyz:/usr/sbin$ ls *-bpfcc
 argdist-bpfcc         javaflow-bpfcc        runqlen-bpfcc
 bashreadline-bpfcc    javagc-bpfcc          runqslower-bpfcc
 bindsnoop-bpfcc       javaobjnew-bpfcc      shmsnoop-bpfcc
@@ -386,7 +564,7 @@ inject-bpfcc          rubystat-bpfcc        zfsslower-bpfcc
 javacalls-bpfcc       runqlat-bpfcc
 
 
-rikkt0r@PP-NB-0124:20:35:12:/usr/sbin$ ls *.bt
+rikkt0r@xyz:/usr/sbin$ ls *.bt
 bashreadline.bt    mdflush.bt    tcpaccept.bt
 biolatency.bt      naptime.bt    tcpconnect.bt
 biosnoop.bt        oomkill.bt    tcpdrop.bt
@@ -404,7 +582,7 @@ loads.bt           syscount.bt
 # Nie jest to BPF
 #  ale chciałem pokazać przodków tych narzędzi :)
 
-rikkt0r@PP-NB-0124:20:35:18:/usr/sbin$ ls *-perf
+rikkt0r@xyz:/usr/sbin$ ls *-perf
 bitesize-perf    functrace-perf  perf-stat-hist-perf
 cachestat-perf   iolatency-perf  reset-ftrace-perf
 execsnoop-perf   iosnoop-perf    syscount-perf
@@ -414,17 +592,38 @@ funcslower-perf  opensnoop-perf  uprobe-perf
                     </code>
                 </pre>
             </section>
+
+            <section data-menu-title="BPF Tools Gregg">
+                <img src="assets/bpf_performance_tools_book.png" />
+            </section>
         </section>
 
         <section>
             <h2>The end; &copy; rikkt0r; @:priv@asap.solutions</h2>
             <p>(づ｡◕‿‿◕｡)づ Bibliography</p>
             <ol>
-                <li><a href="https://www.brendangregg.com/blog/images/2019/bpf_performance_tools_book.png"
+                <li>
+                    <a href="https://www.brendangregg.com/bpf-performance-tools-book.html"
                        target="_blank">[BPF Performance Tools]</a>
                 </li>
-                <li>manpages</li>
-                <li class="r-fit-text">& everything in assets/ directory to this presentation</li>
+                <li>
+                    <a href="https://ebpf.io/" target="_blank">[eBPF.io]</a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=Wb_vD3XZYOA" target="_blank">[BPF Thriller Document]</a>
+                </li>
+                <li>
+                    <a class="r-fit-text" href="https://www.slideshare.net/slideshow/usenix-atc-2017-visualizing-performance-with-flame-graphs/77852774" target="_blank">
+                        [USENIX ATC 2017: Visualizing Performance with Flame Graphs]
+                    </a>
+                </li>
+                <li>
+                    <a class="r-fit-text" href="https://www.slideshare.net/slideshow/flamescope-2018/122582735" target="_blank">
+                        [FlameScope 2018; Brendan Gregg]
+                    </a>
+                </li>
+                <li>Any other material from Gregg, lol</li>
+                <li>&& you best friend, manpages</li>
             </ol>
         </section>
     </div>
